pushed whatever i have done

--- a/app/webroot/css/theme.css
+++ b/app/webroot/css/theme.css
@@ -2,3 +2,12 @@
 .jumbotron.collapsed {
     padding: 0;
 }
+.custom-button {
+    cursor: pointer;
+}
+.selectable {
+    background-color: #ddd;
+}
+.custom-button:hover {
+    background-color: #ddd;
+}
